# cumpleona

./: .env.sample  .gitignore  ANALYTICS.md  CLOUDFLARE_ANALYTICS.md  DEPLOYMENT.md  README.md  TEST_RESULTS.md  VERTEX_AI_SETUP.md  _redirects  build.sh  cloudflare-worker-analytics-example.js  index.html  package.json  pyproject.toml  scenario_prompts_review.csv  wrangler.toml
css/: styles.css
data/: agents.json  story.json
docs/: diagram.mermaid
js/: app.js  puzzles.js
prompts/: AVATAR_PROMPT.txt  README_agents.md  README_posters.md  agent_prompts.json  agentes_chatgpt.txt  agents_generation.json  poster_scenes.json  scenario_prompts.json
prompts/generated_posters/: ona_ada_scene01_prompt.txt  ona_ada_scene02_prompt.txt  ona_ada_scene03_prompt.txt  ona_ada_scene04_prompt.txt  ona_ada_scene05_prompt.txt  ona_ada_scene06_prompt.txt  ona_ada_scene07_prompt.txt  ona_ada_scene09_prompt.txt  ona_ada_scene10_prompt.txt  ona_ada_scene11_prompt.txt  ona_ada_scene12_prompt.txt  ona_ada_scene13_prompt.txt  ona_ada_scene14_prompt.txt  ona_ada_scene15_prompt.txt  ona_ainhoa_scene01_prompt.txt  ona_ainhoa_scene02_prompt.txt  (+235 more)
reference/: README.md
scripts/: analyze_analytics.py  check_agents_setup.py  check_posters_setup.py  check_references.py  download_images.py  generate_agents.py  generate_poster_prompts.py  generate_posters.py  generate_prompts.py  generate_qr_codes.py  generate_scenarios.py  generate_single_poster_prompts.py  optimize_all_images.py  optimize_images.py  test_game_integrity.py
web/: analytics-dashboard.html  index.html  print-cards.html
(+30 files in other folders)
